--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               </div>
             </nav>
           </div>
-          <div class="scrollerSection context-dark section section-center bg-image bg-image-01" id="home" style="background: url(&quot;images/index-01.jpg&quot;); background-size: cover;">
+          <div class="scrollerSection context-dark section section-center bg-image bg-image-01" id="home" style="background: url(&quot;images/kitchen3.JPG&quot;); background-size: cover;">
             <div class="container intro-text">
               <h1 class="text-animation">
                 <span class="word1" style="font-weight: bold;font-size: 60px;">
@@ -126,7 +126,7 @@
             </div>
           </div>
 
-          <div class="section-fade scrollerSection context-dark section section-top bg-image bg-image-04" id="who" style="background: url(&quot;images/index-04.jpg&quot;); background-size: cover;">
+          <div class="section-fade scrollerSection context-dark section section-top bg-image bg-image-04" id="who" style="background: url(&quot;images/dressing.JPG&quot;); background-size: cover;">
             <div class="container text-xl-left section-lg-top-200">
               <h2 class="wow fadeInUp" data-wow-delay=".4s">Who We Are</h2>
               <p class="wow fadeInUp" data-wow-delay=".6s">Innovation has always been a part of the production culture at the Better. The group's objective is the end-customer satisfaction.<br class="d-none d-xl-block">The Better concentrates style and technological research on specific designs targeted at guaranteeing maximum quality.</p>
@@ -146,7 +146,7 @@
               </p>
             </div>
           </div>
-          <div class="section-fade scrollerSection context-dark section section-middle bg-image bg-image-03" id="CNC" style="background: url(&quot;images/CNC.jfif&quot;); background-size: cover;">
+          <div class="section-fade scrollerSection context-dark section section-middle bg-image bg-image-03" id="CNC" style="background: url(&quot;images/CNC2.jfif&quot;); background-size: cover;">
             <div class="container text-lg-left">
               <div class="row justify-content-sm-center justify-content-lg-end align-items-sm-center">
                 <div class="col-xl-6 col-md-8">
@@ -158,7 +158,7 @@
               </div>
             </div>
           </div>
-          <div class="section-fade scrollerSection context-dark section section-middle bg-image bg-image-030" id="edge-band" style="background: url(&quot;images/Edge-Banding.jfif&quot;); background-size: cover;">
+          <div class="section-fade scrollerSection context-dark section section-middle bg-image bg-image-030" id="edge-band" style="background: url(&quot;images/Edge-Banding.png&quot;); background-size: cover;">
             <div class="container text-lg-left">
               <div class="row justify-content-sm-center justify-content-lg-start align-items-sm-center">
                 <div class="col-xl-6 col-md-8">
